# mcm-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-14-bus-address-cli-arg.md  2026-04-14-ci-setup.md  2026-04-17-align-simulator-with-sygnal-docs.md
mcm_simulator/: __init__.py  config_store.py  crc8.py  device_config.py  simulator.py
tests/: test_ci_hooks.py  test_config_protocol.py  test_crc8.py  test_diagnostics_frames.py  test_identify.py  test_multi_device.py  test_signal_reporting.py  test_simulator.py  test_watchdog_jitter.py
